# tcysm-bot

./: .env.example  Cargo.toml  sqlx-data.json
migrations/: 20230806095252_authentications.sql  20230827131916_linked_roles.sql
src/: helpers.rs  main.rs
src/auth/: mod.rs
src/checks/: mod.rs
src/commands/: mod.rs
src/meta/: mod.rs
