[package]
name = "tcysm_bot"
authors = ["Daniel Williams <daniel_williams@live.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
poise = "0.5"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "process"] }
