[package]
name = "tcysm_bot"
authors = ["Daniel Williams <daniel_williams@live.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
poise = "0.5"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = "1.0.177"
tokio = { version = "1.4.0", features = ["rt-multi-thread", "process"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
humantime = "2.1.0"
